# python-rust-integration

./: README.md  setup.py  test.py
python-test/: .test.py.swp  .~lock.input.xlsx#  input.xlsx  test.py
rust/: Cargo.toml  build.rs
rust/src/: .lib.rs.swp  .tests.rs.swp  lib.rs  tests.rs
task/: .__init__.py.swp  __init__.py
task.egg-info/: PKG-INFO  SOURCES.txt
