[package]
name = "task"
version = "0.1.0"
authors = ["Rodrigo <rodrigomauricio@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "task"
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "0.14.2"

[dependencies]
calamine = "0.16.1"
serde_json = "1.0.53"
serde = "*"
num-format = "0.4.0"
